# course_work_3

./: README.md  pyproject.toml
course_work_3/: main.py
course_work_3/utils/: utils.py
tests/: test_json.json  test_utils.py
